[Java] Add tests after adding new options for java command
IDEA-359564

GitOrigin-RevId: 706b25bbfaf1e369f4324a10024daba81501166a